--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,13 +5,11 @@
 #  - tmux(1) - Linux manual page
 #   http://man7.org/linux/man-pages/man1/tmux.1.html
 #---------------------------------
-
 # TMUXのバージョンを取得
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
 
 
-# 基本設定
-#{{{
+# Basic {{{
 ## 256色端末を使用する
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
@@ -32,8 +30,7 @@ setw -g pane-base-index 1
 #}}}
 
 
-# キーの割り当て変更
-#{{{
+# Key Mapping {{{
 ## prefixキーの割り当て(Ctr+a)
 unbind C-b
 set -g prefix C-k
@@ -60,8 +57,7 @@ set -g clock-mode-colour colour197
 #}}}
 
 
-# status lineの設定
-#{{{
+# status line {{{
 ## status lineでのキーバインドをvi
 set -g status-keys vi
 
@@ -71,9 +67,9 @@ set -g status-justify "centre"
 set -g status-style bg=colour66,fg=colour230
 
 ## status-left のフォーマット
-set -g status-left " #H"
+set -g status-left " #(hostname)"
 ## status-left の最大の長さ
-set -g status-left-length 15
+set -g status-left-length 20
 
 ## window-status のフォーマット
 set -g window-status-format " #I: #W "
@@ -83,17 +79,13 @@ set -g window-status-current-format "#[fg=colour66,bg=colour230,bold] #I: #W "
 set -g window-status-separator ""
 
 ## status-right のフォーマット
-### for Mac OS
-#set -g status-right '[%m/%d(%a) %H:%M] #[bg=colour230,fg=colour66] #(battery --tmux)#[bg=colour230, fg=colour66] #[default]'
-### for WSL
-set -g status-right '#[bg=colour66] #[fg=colour230,bold]%m/%d(%a) %H:%M | #(get_battery_tmux) #[default]'
+set -g status-right '#[bg=colour66] #[fg=colour230,bold]%m/%d(%a) %H:%M #(get_battery_tmux)#[default]'
 ## status-right の最大の長さ
 set -g status-right-length 30
 #}}}
 
 
-# 操作関連
-#{{{
+# Copy & Paste {{{
 ## マウス操作を有効化
 set -g mouse on
 ## コマンドモードでの選択方法をvim風に変更
