--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,9 +92,12 @@ set -g mouse on
 setw -g mode-keys vi
 ## 行選択: V
 bind -T copy-mode-vi 'V' send -X select-line
-## クリップボートとの連携
-### for MacOS
-#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+## クリップボートとの連携 (Mac OS)
+if-shell "uname | grep -q Darwin" \
+  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"'
+if-shell "uname | grep -q Darwin" \
+  'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"'
+if-shell "uname | grep -q Darwin" \
+  'bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"'
 #}}}
