update my dotfiles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,97 +1,102 @@
 #---------------------------------
 # .tmux.conf
 # Maintained by Kohei Sudo
+#
 # * References
 #  - tmux(1) - Linux manual page
-#   http://man7.org/linux/man-pages/man1/tmux.1.html
+#     http://man7.org/linux/man-pages/man1/tmux.1.html
 #---------------------------------
-# TMUXのバージョンを取得
+### basic ###
+#{{{
+# get tmux version
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
-
-
-# Basic {{{
-## 256色端末を使用する
+# 256色端末を使用する
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
-## 全てのベルを無視
+# 全てのベルを無視
 set -g bell-action none
-## Escキーの遅延を解消
+# Escキーの遅延を解消
 set -s escape-time 0
-## clipboardをterminalと共有
+# clipboardをterminalと共有
 set -g set-clipboard on
-## status line を更新する間隔を1秒にする
+# status line を更新する間隔を1秒にする
 set -g status-interval 1
-## ウィンドウのインデックスを1から始める
+# ウィンドウのインデックスを1から始める
 set -g base-index 1
-## ペインのインデックスを1から始める
+# ペインのインデックスを1から始める
 setw -g pane-base-index 1
-## 罫線をACSに強制する
+# 罫線をACSに強制する
 #set -ag terminal-overrides ',*:U8=0'
 #}}}
 
-
-# Key Mapping {{{
-## prefixキーの割り当て(Ctr+a)
+### key mapping ###
+#{{{
+# prefixキーの割り当て(Ctr+a)
 unbind C-b
 set -g prefix C-k
-## prefix + -で水平分割
+# prefix + -で水平分割
 bind - split-window -v
-## prefix + |で垂直分割
+# prefix + |で垂直分割
 bind | split-window -h
-## ペインの移動をhkjlで行う
+# ペインの移動をhkjlで行う
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-## ペインのリサイズをHKJLで行う
+# ペインのリサイズをHKJLで行う
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
-## ステータスラインを表示/非表示
+# ステータスラインを表示/非表示
 bind t set status
-## clock-mode
+# clock-mode
 bind T clock-mode
-## clock-modeの色
+# clock-modeの色
 set -g clock-mode-colour colour197
 #}}}
 
-
-# status line {{{
-## status lineでのキーバインドをvi
+### status line ###
+#{{{
+# status lineでのキーバインドをvi
 set -g status-keys vi
 
-## status line を中央揃え
+# status line を中央揃え
 set -g status-justify "centre"
-### status line の色
+# status line の色
 set -g status-style bg=colour66,fg=colour230
 
-## status-left のフォーマット
-set -g status-left " #(hostname)"
-## status-left の最大の長さ
+# status-left のフォーマット
+set -g status-left " #H"
+# status-left の最大の長さ
 set -g status-left-length 20
 
-## window-status のフォーマット
+# window-status のフォーマット
 set -g window-status-format " #I: #W "
-## カレントウィンドウの window-status のフォーマット
+# カレントウィンドウの window-status のフォーマット
 set -g window-status-current-format "#[fg=colour66,bg=colour230,bold] #I: #W "
-## window-statusの間をつめる
+# window-statusの間をつめる
 set -g window-status-separator ""
 
-## status-right のフォーマット
+# status-right のフォーマット
 set -g status-right '#[bg=colour66] #[fg=colour230,bold]%m/%d(%a) %H:%M #(get_battery_tmux)#[default]'
-## status-right の最大の長さ
+# status-right の最大の長さ
 set -g status-right-length 30
 #}}}
 
-
-# Copy & Paste {{{
-## マウス操作を有効化
+### copy ###
+#{{{
+# マウス操作を有効化
 set -g mouse on
-## コマンドモードでの選択方法をvim風に変更
+# コマンドモードでの選択方法をvim風に変更
 setw -g mode-keys vi
-## 行選択: V
-bind -T copy-mode-vi 'V' send -X select-line
+# vi-like selection
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi V send -X select-line
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+# copy / paste
+bind -T copy-mode-vi y send -X copy-selection
+bind C-p paste-buffer
 
 ## クリップボートとの連携 (Mac OS)
 if-shell "uname | grep -q Darwin" \
@@ -101,3 +106,10 @@ if-shell "uname | grep -q Darwin" \
 if-shell "uname | grep -q Darwin" \
   'bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"'
 #}}}
+
+
+### status-right のフォーマット
+#set -g status-right '[%m/%d(%a) %H:%M] #[bg=colour230,fg=colour66] #(battery --tmux)#[bg=colour230, fg=colour66] #[default]'
+#### アクティブなペインのみ背景色を変更
+#set -g window-active-style 'bg=colour235'
+#set -g window-style 'bg=colour237'
