support change_tmux_mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,10 +6,27 @@
 #  - tmux(1) - Linux manual page
 #     http://man7.org/linux/man-pages/man1/tmux.1.html
 #---------------------------------
-### basic ###
+### preprocess ###
 #{{{
 # get tmux version
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
+
+# define color
+MY_COLOR="bg=colour66,fg=colour230"
+
+# define prefix key
+MY_PREFIX_KEY="C-k"
+
+# for my shellscript
+TMUX_MODE="MAIN"
+
+#sub setting
+#MY_COLOR="bg=colour166,fg=colour230"
+#MY_PREFIX_KEY="C-s"
+#}}}
+
+### basic ###
+#{{{
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
@@ -33,7 +50,7 @@ setw -g pane-base-index 1
 #{{{
 # prefixキーの割り当て(Ctr+a)
 unbind C-b
-set -g prefix C-k
+set -g prefix $MY_PREFIX_KEY
 # prefix + -で水平分割
 bind - split-window -v
 # prefix + |で垂直分割
@@ -64,7 +81,7 @@ set -g status-keys vi
 # status line を中央揃え
 set -g status-justify "centre"
 # status line の色
-set -g status-style bg=colour66,fg=colour230
+set -g status-style $MY_COLOR
 
 # status-left のフォーマット
 set -g status-left " #H"
