change dir name

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,8 @@ set -g base-index 1
 setw -g pane-base-index 1
 # 罫線をACSに強制する
 #set -ag terminal-overrides ',*:U8=0'
+# フォーカスイベントをnvimから検知できるようにする
+set -g focus-events on
 #}}}
 
 ### key mapping ###
