copilotで色々と変えた

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,124 +1,118 @@
 #---------------------------------
 # .tmux.conf
 # Maintained by Kohei Sudo
-#
-# * References
-#  - tmux(1) - Linux manual page
-#     http://man7.org/linux/man-pages/man1/tmux.1.html
+# Updated for High Portability (Mac/Linux/WSL/SSH)
 #---------------------------------
+
 ### preprocess ###
-# get tmux version
-run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
-
-# define color
-MY_COLOR="bg=colour66,fg=colour230"
-
-# define prefix key
+# define color (Solarized like)
+MY_COLOR_BG="colour66"
+MY_COLOR_FG="colour230"
 MY_PREFIX_KEY="C-k"
-
-# for my shellscript
-TMUX_MODE="MAIN"
-
-#sub setting
-#MY_COLOR="bg=colour166,fg=colour230"
-#MY_PREFIX_KEY="C-s"
 
 ### basic ###
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
-set -g terminal-overrides 'xterm:colors=256'
+# True Color (24bit) 対応 (Neovimの色を正しく出すため)
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 # 全てのベルを無視
 set -g bell-action none
-# Escキーの遅延を解消
-set -s escape-time 50
-# clipboardをterminalと共有
-set -g set-clipboard on
+# Escキーの遅延を解消 (Neovimのモード切替遅延防止)
+set -s escape-time 0
 # status line を更新する間隔を1秒にする
 set -g status-interval 1
+# ウィンドウの履歴行数
+set -g history-limit 50000
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
 # ペインのインデックスを1から始める
 setw -g pane-base-index 1
-# 罫線をACSに強制する
-#set -ag terminal-overrides ',*:U8=0'
 # フォーカスイベントをnvimから検知できるようにする
 set -g focus-events on
 
 ### key mapping ###
-# prefixキーの割り当て(Ctr+a)
+# prefixキーの割り当て
 unbind C-b
 set -g prefix $MY_PREFIX_KEY
-# prefix + -で水平分割
-bind - split-window -v
-# prefix + |で垂直分割
-bind | split-window -h
+
+# 設定ファイルの再読み込み (Prefix + r)
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# split window (カレントディレクトリを維持する)
+bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+
 # ペインの移動をhkjlで行う
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
 # ペインのリサイズをHKJLで行う
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
 # ステータスラインを表示/非表示
 bind t set status
-# clock-mode
-bind T clock-mode
-# clock-modeの色
-set -g clock-mode-colour colour197
+
+# 同時入力切替 (Prefix + e)
+# 複数のペインに同時入力したい時に便利（サーバー作業など）
+bind e setw synchronize-panes \; display "synchronize-panes #{?pane_synchronized,on,off}"
 
 ### status line ###
 # status lineでのキーバインドをvi
 set -g status-keys vi
-
 # status line を中央揃え
 set -g status-justify "centre"
 # status line の色
-set -g status-style $MY_COLOR
+set -g status-style fg=$MY_COLOR_FG,bg=$MY_COLOR_BG
 
-# status-left のフォーマット
-set -g status-left " #H"
-# status-left の最大の長さ
+# status-left
+set -g status-left " #H:[#S] "
 set -g status-left-length 20
 
-# window-status のフォーマット
+# window-status
 set -g window-status-format " #I: #W "
-# カレントウィンドウの window-status のフォーマット
-set -g window-status-current-format "#[fg=colour66,bg=colour230,bold] #I: #W "
-# window-statusの間をつめる
+set -g window-status-current-format "#[fg=$MY_COLOR_BG,bg=$MY_COLOR_FG,bold] #I: #W "
 set -g window-status-separator ""
 
-# status-right のフォーマット
-set -g status-right '#[bg=colour66] #[fg=colour230,bold]%m/%d(%a) %H:%M #(get_battery_tmux)#[default]'
-# status-right の最大の長さ
-set -g status-right-length 30
+# status-right (バッテリー表示は削除しシンプルに)
+set -g status-right "#[bg=$MY_COLOR_BG] #[fg=$MY_COLOR_FG,bold]%m/%d(%a) %H:%M #[default]"
+set -g status-right-length 50
 
-### copy ###
+### copy mode ###
 # マウス操作を有効化
 set -g mouse on
 # コマンドモードでの選択方法をvim風に変更
 setw -g mode-keys vi
-# vi-like selection
+
+# --- High Portability Clipboard (OSC 52) ---
+# 外部ツール(xclip/pbcopy)に依存せず、ターミナルエミュレータ経由でクリップボード転送を行う
+# これにより、Mac/WSL/SSH先のリモートサーバ全てで同じ設定が使える
+set -s set-clipboard on
+
+# コピー操作のキーバインド (Version checkなしで動く汎用的な記述)
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi V send -X select-line
 bind -T copy-mode-vi C-v send -X rectangle-toggle
-# copy / paste
-bind -T copy-mode-vi y send -X copy-selection
-bind C-p paste-buffer
 
-## クリップボートとの連携 (Mac OS)
-if-shell "uname | grep -q Darwin" \
-  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"'
-if-shell "uname | grep -q Darwin" \
-  'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"'
-if-shell "uname | grep -q Darwin" \
-  'bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"'
+# yでコピー (OSC 52対応ターミナルならこれでクリップボードに入る)
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
 
+# 明示的なOSごとのクリップボード連携 (OSC 52非対応ターミナル向けの保険)
+# Mac
+if-shell "uname | grep -q Darwin" \
+  'bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"'
+# Linux (xclipがある場合のみ)
+if-shell "which xclip" \
+  'bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -sel clip"'
+# WSL (clip.exe)
+if-shell "grep -q Microsoft /proc/version" \
+  'bind -T copy-mode-vi y send -X copy-pipe-and-cancel "clip.exe"'
 
-### status-right のフォーマット
-#set -g status-right '[%m/%d(%a) %H:%M] #[bg=colour230,fg=colour66] #(battery --tmux)#[bg=colour230, fg=colour66] #[default]'
-#### アクティブなペインのみ背景色を変更
-#set -g window-active-style 'bg=colour235'
-#set -g window-style 'bg=colour237'
+# マウスドラッグ終了時の挙動 (コピーして選択モードを抜ける)
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel
